--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ image: mountains.jpg
 
 here: NEW
 <h1>
-  {{ title }}
+  {{ page.title }}
 </h1>
 {% if page.image %}
   <img src="{{ site.github.url }}/assets/img/{{ page.image }}">
