--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@ here: NEW
   <img src="{{ site.github.url }}/assets/img/{{ page.image }}">
 {% endif %}
 <article>
-  {{ content }}
+  Inhalt, Inhalt
 </article>
+
+<!-- Contact -->
+<h2>Contact</h2>
+<article>
+If you are having any problems, any questions or suggestions, feel free to [file a GitHub issue](https://github.com/cdeck3r/acbattery/issues/new)
+</article>
+
 {% if site.hide_post_date != true %}
   {% include post-date.html %}
 {% endif %}
